--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.test</groupId>
-	<artifactId>test</artifactId>
-	<name>test</name>
+	<groupId>com.u2ware.springfield-example</groupId>
+	<artifactId>springfield-example</artifactId>
+	<name>springfield-example</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.u2ware</groupId>
 			<artifactId>springfield</artifactId>
-			<version>1.3.7</version>
+			<version>1.3.8</version>
 		</dependency>
 	
 		<!-- 
