--- a/src/main/java/example/u2ware/springfield/application-context.properties
+++ b/src/main/java/example/u2ware/springfield/application-context.properties
@@ -10,7 +10,7 @@ baseDatasource=hsqlDataSource
 # context-datasource-c3p0.xml
 ################################
 datasource.c3p0.driver=org.postgresql.Driver
-datasource.c3p0.url=jdbc:postgresql://localhost/springfield
+datasource.c3p0.url=jdbc:postgresql://localhost/api
 datasource.c3p0.username=postgres
 datasource.c3p0.password=postgres
 datasource.c3p0.initialPoolSize=5
@@ -52,15 +52,11 @@ webmvc.messageBasenamesPattern=/**/messages.xml
 
 
 ################################
-# context-webmvc-multipart.xml
-################################
-webmvc.multipart.location=C:\\share\\
-webmvc.multipart.maxUploadSize=20000000
-
-
-################################
 # context-webmvc-view.xml
 ################################
+webmvc.view.multipart.maxUploadSize=20000000
+#webmvc.view.multipart.location=/Users/admin/Dropbox/Project/u2ware/com.u2ware.springfield-1.3.8/recycle/
+webmvc.view.multipart.location=c:\\share
 webmvc.view.tiles.definitionsPattern=/**/tiles-definitions.xml
 webmvc.view.thymeleaf.cacheable=true
 
@@ -82,7 +78,7 @@ webmvc.view.method.delete=refresh
 ################################
 # base extension
 ################################
-webmvc.view.extension.none=tilesView
+webmvc.view.extension.none=thymeleafView
 webmvc.view.extension.download=downloadView
 webmvc.view.extension.stream=streamView
 webmvc.view.extension.json=jsonView
