--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app 
-		version="3.0" 
-		xmlns="http://java.sun.com/xml/ns/javaee"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-			http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+	version="3.0" 
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+	                    http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<!-- 
 	##########################################
-	#     RootContext
+	#	RootContext
 	##########################################
 	-->
 	<context-param>
@@ -18,11 +18,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
-
+	
+	
 	<!-- 
 	##########################################
-	#     CharacterEncodingFilter
+	#	CharacterEncodingFilter
 	##########################################
 	-->
 	<filter>
@@ -37,26 +37,26 @@
 		<filter-name>encodingFilter</filter-name>
 		<servlet-name>application</servlet-name>
 		<async-supported>true</async-supported>
-	</filter-mapping>     
-
+	</filter-mapping>	
+	
 	<!-- 
 	##########################################
-	#     MultipartFilter
+	#	MultipartFilter
 	##########################################
 	-->
 	<filter>
 		<filter-name>multipartFilter</filter-name>
-		<filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+		<filter-class>com.u2ware.springfield.support.multipart.MultipartFileFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>multipartFilter</filter-name>
 		<servlet-name>application</servlet-name>
 		<async-supported>true</async-supported>
 	</filter-mapping>
-
+	
 	<!-- 
 	##########################################
-	#     http MethodFilter
+	#	http MethodFilter
 	##########################################
 	-->
 	<filter>
@@ -67,12 +67,12 @@
 		<filter-name>httpMethodFilter</filter-name>
 		<servlet-name>application</servlet-name>
 		<async-supported>true</async-supported>
-	</filter-mapping>     
-
-
+	</filter-mapping>	
+	
+	
 	<!-- 
 	##########################################
-	#     Spring Dispatcher Servlet
+	#	Spring Dispatcher Servlet
 	##########################################
 	-->
 	<servlet>
@@ -81,6 +81,7 @@
 		<load-on-startup>1</load-on-startup>
 		<async-supported>true</async-supported>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>application</servlet-name>
 		<url-pattern>/</url-pattern>
